ui: fix existing conferences drawer visibility issue
* INSPIR-3589

--- a/ui/src/submissions/conferences/components/ExistingConferencesDrawer.scss
+++ b/ui/src/submissions/conferences/components/ExistingConferencesDrawer.scss
@@ -1,5 +1,5 @@
 .__ExistingConferencesDrawer__ {
-  z-index: $zindex-header + 1;
+  z-index: $zindex-header + 1 !important;
 
   .ant-drawer-content-wrapper {
     width: 25% !important;
